Fix Z-Index, Change Hero

--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,45 @@
     html {
         scroll-behavior: smooth;
     }
+      
+      ::-webkit-scrollbar {
+        width: .5rem;
+      }
+      
+      ::-webkit-scrollbar-track {
+        background-color: rgba(255, 255, 255, 0.8);
+      }
+      
+      ::-webkit-scrollbar-thumb {
+        background-color: rgb(59, 130, 246);
+      }
+      
+      ::-webkit-scrollbar-thumb:hover {
+        background-color: rgb(37, 99, 235);
+      }
+      
+      ::-webkit-scrollbar-thumb:active {
+        background-color: rgb(30, 64, 175);
+      }
 }
 
 @layer components {
+    #hero .coverBg {
+        background-image: url('/img/1-t.png');
+        background-size: cover;
+    }
+
     textarea {
         height: 150px;
     }
 
     footer {
         background-color: #3586ff;
+    }
+
+    .wave__wrapper {
+        position: relative;
+        padding-top: 2.5rem;
     }
 
     .wave {
